--- a/nature-tours/index.html
+++ b/nature-tours/index.html
@@ -34,44 +34,84 @@
         </header>
 
         <section class="grid-test">
-
+            
+            <!-- one part of 2 part grid -->
             <div class="row">
-                <div class="col-1-of-3">
-                    col 1 of 3
+                <div class="col-1-of-2">
+                    col 1 of 2
                 </div>              
-                <div class="col-1-of-3">
-                    col 1 of 3
-                </div>
-                <div class="col-1-of-3">
-                    col 1 of 3
+                <div class="col-1-of-2">
+                    col 1 of 2
                 </div>
             </div>
             
             <div class="row">
+                <!-- one part of 3 part grid -->
                 <div class="col-1-of-3">
                     col 1 of 3
                 </div>              
+                <!-- one part of 3 part grid -->
+                <div class="col-1-of-3">
+                    col 1 of 3
+                </div>
+                <!-- one part of 3 part grid -->
+                <div class="col-1-of-3">
+                    col 1 of 3
+                </div>
+            </div>
+
+            <div class="row">
+                <!-- 1 part of 3 part grid -->
+                <div class="col-1-of-3">
+                    col 1 of 3
+                </div>              
+                <!-- 2 part of 3 part grid -->
                 <div class="col-2-of-3">
                     col 2 of 3
                 </div>
             </div>
 
             <div class="row">
+                <!-- 1 part of 4 part grid -->
                 <div class="col-1-of-4">
                     col 1 of 4
                 </div>              
+                <!-- 1 part of 4 part grid -->
                 <div class="col-1-of-4">
                     col 1 of 4
                 </div>
+                <!-- 1 part of 4 part grid -->
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+                <!-- 1 part of 4 part grid -->
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+            </div>
+
+
+            <div class="row">
+                <!-- 1 part of 4 part grid -->
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>    
+                <!-- 1 part of 4 part grid -->
+                <div class="col-1-of-4">
+                    col 1 of 4
+                </div>
+                <!-- 2 part of 4 part grid -->
                 <div class="col-2-of-4">
                     col 2 of 4
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-1-of-3">
+                <!-- 1 part of 4 part grid -->
+                <div class="col-1-of-4">
                     col 1 of 4
-                </div>              
+                </div>    
+                <!-- 3 part of 4 part grid -->
                 <div class="col-3-of-4">
                     col 3 of 4
                 </div>
