--- a/nature-tours/index.html
+++ b/nature-tours/index.html
@@ -135,5 +135,60 @@
 
             </div>
         </section>
+
+        <section class="section-tours">
+            
+            <!-- center the text which is inside this div -->
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    Most Popular Tours      
+                </h2>
+            </div>
+
+            <div class="row">
+                <!-- one part of 3 part grid --->
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <!-- as per BEM model these elements should not have naming convention as
+                                car__side--picture and such as there is no dependency between card__picture and
+                                card__side. Hence, they should be individual card components
+                            -->
+                            <div class="card__picture card__picture--1">
+                            
+                            </div>
+                            <h4 class="card__heading">
+                                <!-- this is not child element of heading but new element of card so treat it like that -->
+                                <span class="card__heading-span card__heading-span--1">
+                                    The Sea Explorer
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tour</li>
+                                    <li>up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>sleep in cozy hotels</li>
+                                    <li>Difficulty: Easy </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            BACK
+                        </div>
+                    </div>
+                </div>              
+                <!-- one part of 3 part grid -->
+                <div class="col-1-of-3">
+                    col 1 of 3
+                </div>
+                <!-- one part of 3 part grid -->
+                <div class="col-1-of-3">
+                    col 1 of 3
+                </div>
+            </div>
+
+        </section>
+
     </body>
 </html>
