--- a/nature-tours/index.html
+++ b/nature-tours/index.html
@@ -174,17 +174,85 @@
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
-                            BACK
+                            <div class="card__call-to-action">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$300</p>
+                                </div>
+                                <a href="" class="btn btn--white"> Book Now</a>
+                            </div>
                         </div>
                     </div>
                 </div>              
                 <!-- one part of 3 part grid -->
                 <div class="col-1-of-3">
-                    col 1 of 3
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <!-- as per BEM model these elements should not have naming convention as
+                                car__side--picture and such as there is no dependency between card__picture and
+                                card__side. Hence, they should be individual card components
+                            -->
+                            <div class="card__picture card__picture--2"></div>
+                            <h4 class="card__heading">
+                                <!-- this is not child element of heading but new element of card so treat it like that -->
+                                <span class="card__heading-span card__heading-span--2">
+                                    The Forest Hiker
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>7 day tour</li>
+                                    <li>up to 40 people</li>
+                                    <li>4 tour guides</li>
+                                    <li>sleep in Outdoor Tents</li>
+                                    <li>Difficulty: Medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class="card__call-to-action">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$550</p>
+                                </div>
+                                <a href="" class="btn btn--white"> Book Now</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- one part of 3 part grid -->
                 <div class="col-1-of-3">
-                    col 1 of 3
+                    <div class="card">
+                        <!-- front side -->
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3"></div>
+                            <div class="card__heading">
+                                <!-- this is not child element of heading but new element of card so treat it like that -->
+                                <span class="card__heading-span card__heading-span--3">
+                                    The Snow Walker
+                                </span>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>5 day tour</li>
+                                    <li>up to 15 people</li>
+                                    <li>3 tour guides</li>
+                                    <li>sleep in Snow clad Tents</li>
+                                    <li>Difficulty: Hard</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!-- back side -->
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class="card__call-to-action">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">Only</p>
+                                    <p class="card__price-value">$700</p>
+                                </div>
+                                <a href="" class="btn btn--white"> Book Now</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
